--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "newCampaign": {
+    "campaign": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/newCampaign",
+            "outputPath": "dist/campaign",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "newCampaign:build"
+            "browserTarget": "campaign:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "newCampaign:build:production"
+              "browserTarget": "campaign:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "newCampaign:build"
+            "browserTarget": "campaign:build"
           }
         },
         "test": {
@@ -111,18 +111,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "newCampaign:serve"
+            "devServerTarget": "campaign:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "newCampaign:serve:production"
+              "devServerTarget": "campaign:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "newCampaign",
+  "defaultProject": "campaign",
   "cli": {
     "analytics": false
   }
